@startuml
scale 0.6
interface Item {
    +getName()
    +getDescription()
    +getType()
}

enum ItemType {
    HEALTH
    POWERUP
    RESOURCE
}


class ItemBase {
}

class HealingItem {
}

interface UsableItem {
    +use(player: Player)
    +getAmount()
}

class PowerUpItem {
    +getBoostedAttribute()
}

class UnUsableItem {
}

interface Player {
    +useItem(item: UsableItem)
}

enum AttributeIdentifier{
}

Item <|-- ItemBase
Item--|> ItemType

HealingItem --|> ItemBase
PowerUpItem --|> ItemBase
PowerUpItem --|> AttributeIdentifier
UnUsableItem --|> ItemBase

UsableItem <|.. HealingItem
UsableItem <|.. PowerUpItem

Player --> UsableItem
@enduml